# Kale

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SourceList.cmake  TODO.md  _application_8cpp.html  _application_8cpp_source.html  _application_8hpp.html  _application_8hpp_source.html  _bezier_8md.html  _buffer_8hpp.html  _buffer_8hpp_source.html  _child_resource_8hpp.html  _child_resource_8hpp_source.html  _circle_8cpp.html  _circle_8cpp_source.html  _circle_8hpp.html  _circle_8hpp_source.html  _collidable_8cpp.html  _collidable_8cpp_source.html  _collidable_8hpp.html  _collidable_8hpp_source.html  _collision_8md.html  _command_buffer_8cpp.html  _command_buffer_8cpp_source.html  _command_buffer_8hpp.html  _command_buffer_8hpp_source.html  _constants_8hpp.html  _constants_8hpp_source.html  _coordinate_system_8md.html  _core_2_core_8hpp.html  _core_2_core_8hpp_source.html  _core_8cpp.html  _core_8cpp_source.html  _core_setup_8cpp.html  _core_setup_8cpp_source.html  _core_validation_8cpp.html  _core_validation_8cpp_source.html  (+434 more)
.github/workflows/: main.yml
JsNBT/: index.html
art/vector/: cover.afdesign  overworld.afdesign  snow.afdesign
assets/shaders/roundedRect/: roundedBottom.glsl  roundedHorizontal.glsl  roundedHorizontalFrag.glsl  roundedHorizontalVert.glsl  roundedVertical.glsl
assets/shaders/roundedRectInverse/: inverseHorizontal.glsl
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
doc/: Doxyfile  DoxygenLayout.xml
editor-assets/: kale.afdesign
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+142 more)
shaders/: PathNode.sksl  shader.frag  shader.vert
shaders/opengl/: PathNode.frag  PathNode.vert  PathNodeFill.frag  PathNodeStroke.frag  shader.vert
src/: EntryPoint.cpp
src/Application/: Application.cpp  Application.hpp
src/Clock/: Clock.hpp
src/Engine/: EntryPoint.cpp
src/Engine/Application/: Application.cpp  Application.hpp  Application_fwd.hpp
src/Engine/Assets/: Assets.cpp  Assets.hpp
src/Engine/Clock/: Clock.cpp  Clock.hpp
src/Engine/Events/: Events.cpp  Events.hpp
src/Engine/Logger/: Logger.cpp  Logger.hpp
src/Engine/Math/Vector/: Vector.hpp
src/Engine/Node/: Node.cpp  Node.hpp
src/Engine/Scene/: Scene.cpp  Scene.hpp
src/Engine/Settings/: Settings.cpp  Settings.hpp
src/Engine/Vulkan/Extensions/: Extensions.hpp
src/Engine/Vulkan/QueueFamilyIndices/: QueueFamilyIndices.cpp  QueueFamilyIndices.hpp
src/Engine/Window/: Window.cpp  Window.hpp
src/Engine/Window/GLFW/: Window.cpp  Window.hpp  WindowGLFW.cpp  WindowInner.hpp  WindowOuter.hpp
src/Engine/Window/SDL/: Window.cpp  Window.hpp
src/Engine/Window/Vulkan/: WindowVkCleanup.cpp  WindowVkSetup.cpp  WindowVkValidation.cpp
src/Events/: Events.cpp  Events.hpp
src/Game/App/: App.cpp  App.hpp
src/Game/Nodes/RoundedRect/: RoundedRect.cpp  RoundedRect.hpp
src/Game/Scenes/: TitleScene.cpp  TitleScene.hpp
src/Kale/: EntryPoint.cpp
src/Kale/Application/: Application.cpp  Application.hpp
src/Kale/Assets/: Assets.cpp  Assets.hpp
src/Kale/Clock/: Clock.cpp
src/Kale/Core/: Core.hpp
src/Kale/Core/Application/: Application.cpp  Application.hpp  EntryPoint.cpp
src/Kale/Core/Clock/: Clock.cpp  Clock.hpp
src/Kale/Core/Events/: Events.hpp
src/Kale/Core/Logger/: Logger.cpp  Logger.hpp
src/Kale/Core/Node/: Node.cpp  Node.hpp
src/Kale/Core/Scene/: Scene.cpp  Scene.hpp
src/Kale/Core/Settings/: Settings.cpp  Settings.hpp
src/Kale/Core/Tree/: Tree.cpp  Tree.hpp
src/Kale/Core/Window/: Window.cpp  Window.hpp
src/Kale/Docs/: Bezier.md  Collision.md  CoordinateSystem.md  Events.md  Logging.md  MainPage.cpp  MainPage.md  Math.md  OpenGLVK.md  PathNode.md  SceneSetup.md  SkeletalAnimation.md  StateAnimation.md  Tutorials.md
src/Kale/Engine/: Engine.hpp
src/Kale/Engine/AnimatableNode/: AnimatableNode.cpp  AnimatableNode.hpp
src/Kale/Engine/BlobNode/: BlobNode.cpp  BlobNode.hpp
src/Kale/Engine/CircleNode/: CircleNode.cpp  CircleNode.hpp
src/Kale/Engine/Collidable/: Collidable.cpp  Collidable.hpp
src/Kale/Engine/DirectionalLight/: DirectionalLight.hpp
src/Kale/Engine/JointNode/: JointNode.cpp  JointNode.hpp
src/Kale/Engine/Light/: Light.cpp  Light.hpp
src/Kale/Engine/Node/: Node.cpp  Node.hpp
src/Kale/Engine/ParticleSystemNode/: ParticleSystemNode.cpp  ParticleSystemNode.hpp
src/Kale/Engine/PathNode/: PathNode.cpp  PathNode.hpp  PathNodeGL.cpp  PathNodeGL.hpp  PathNodeOpenGL.cpp  PathNodeVK.cpp  PathNodeVK.hpp
src/Kale/Engine/PhysicsBody/: PhysicsBody.cpp  PhysicsBody.hpp
src/Kale/Engine/PointLight/: PointLight.cpp  PointLight.hpp
src/Kale/Engine/SkeletalAnimatable/: SkeletalAnimatable.cpp  SkeletalAnimatable.hpp
src/Kale/Engine/SkeletalAnimatableNode/: SkeletalAnimatableNode.cpp  SkeletalAnimatableNode.hpp
src/Kale/Engine/SpotLight/: SpotLight.cpp  SpotLight.hpp
src/Kale/Engine/SpriteNode/: SpriteNode.cpp  SpriteNode.hpp
src/Kale/Engine/StateAnimatable/: StateAnimatable.cpp  StateAnimatable.hpp
src/Kale/Logger/: Logger.cpp  Logger.hpp
src/Kale/Math/: Math.hpp
src/Kale/Node/: Node.cpp  Node.hpp
src/Kale/OpenGL/: OpenGL.hpp
src/Kale/Scene/: Scene.cpp  Scene.hpp
src/Kale/Settings/: Settings.cpp  Settings.hpp
src/Kale/Vulkan/: Vulkan.hpp
src/Kale/Window/: Window.cpp  Window.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Math/Vector/: Vector.hpp
src/Node/: Node.cpp
src/Scene/: Scene.cpp  Scene.hpp
src/Settings/: Settings.cpp  Settings.hpp
src/Window/: Window.hpp
src/Window/GLFW/: WindowGLFW.cpp  WindowOuter.hpp
src/Window/SDL/: Window.hpp
src/Window/Vulkan/: WindowVkCleanup.cpp  WindowVkSetup.cpp  WindowVkValidation.cpp
(+89 files in other folders)
